fix swagger documentation, add css
